--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Matahi Historical Society homepage</title>
+    <title>The Haukai Restaurant</title>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <!-- Here is our main header that is used across all the pages of our website -->
     <header class="header">
-      <h1>Matahi Historical Society</h1>
+      <h1>The Haukai Restaurant</h1>
     </header>
     <nav class="topnav">
       <a href="#" class="topnav">Home</a></li>
-      <a href="#" class="topnav">Browse photos</a></li>
-      <a href="#" class="topnav">Submit photos</a></li>
+      <a href="#" class="topnav">Menu</a></li>
+      <a href="#" class="topnav">Reservation</a></li>
       <a href="#" class="topnav">Contact</a></li>
+      <a href="#" class="topnav">Hours</a></li>
     </nav>
     <!-- Here is our page's main content -->
     <main>
