--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </div>
               <div class="column">
                   <h3>Our Mission</h3>
-                    <p>Our chefs create menus designed to feed ideas and creativity, giving your guests a taste of Aotearoa's provenance, culture and talent.</p>
+                    <p>Our chefs create menus designed to feed ideas and creativity, giving our guests a taste of Aotearoa's provenance, culture and talent.</p>
               </div>
             </div>
             <a href="Privacy Statement.html">Privacy Statement & Terms of Conditions</a><br><br>
