--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
       <style>
         #myMenu {
             width: 100%;
-            height: 975px;
+            height: 100%;
         }
       </style>
       <iframe id="myMenu" src="menu.pdf" alt="Food and Wine Menu" frameborder="0"></iframe>
