--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
             height: 975px;
         }
       </style>
-      <iframe id="myMenu" src="menu.pdf" alt="Food and Wine Menu" frameborder="0"></iframe>
+      <iframe id="myMenu" src="menu.pdf" alt="Food and Wine Menu" style="width:100%; height=560px; border:none; frameborder="0"></iframe>
     </main>
     <!-- And here is our main footer that is used across all the pages of our website -->
     <footer class="footer">
