--- a/menu.html
+++ b/menu.html
@@ -19,13 +19,8 @@
     </nav>
     <!-- Here is our page's main content -->
     <main>
-      <style>
-        #myMenu {
-            width: 100%;
-            height: 975px;
-        }
-      </style>
-      <iframe id="myMenu" src="menu.pdf" alt="Food and Wine Menu" frameborder="0"></iframe>
+     
+      <iframe id="myMenu" src="menu.pdf" alt="Food and Wine Menu" style="overflow:visible;-webkit-overflow-scrolling:touch frameborder="0"></iframe>
     </main>
     <!-- And here is our main footer that is used across all the pages of our website -->
     <footer class="footer">
