--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,12 @@
     </nav>
     <!-- Here is our page's main content -->
     <main>
-     
+      <style>
+        #myMenu {
+            width: 100%;
+            height: 975px;
+        }
+      </style>
       <iframe id="myMenu" src="menu.pdf" alt="Food and Wine Menu" style="overflow:visible;-webkit-overflow-scrolling:touch frameborder="0"></iframe>
     </main>
     <!-- And here is our main footer that is used across all the pages of our website -->
