--- a/reservation.html
+++ b/reservation.html
@@ -66,7 +66,7 @@
     </section>
     <!-- And here is our main footer that is used across all the pages of our website -->
     <footer class="footer">
-      <p>  ©Copyright 2021 by The Haukai Restaurant. All rights reversed.</p>
+      <p>  ©Copyright 2021 by The Haukai Restaurant. All rights reserved.</p>
     </footer>
   </body>
 </html>
