--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1">
     <title>The Haukai Restaurant - Spirit of Maori in Bay of Islands</title>
     <link rel="stylesheet" href="styles/booking.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K9C3WNHC3R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K9C3WNHC3R');
+</script>
   </head>
   <body>
     <!-- Here is our main header that is used across all the pages of our website -->
